--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Resume</title>
 
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet/less" type="text/css" href="./less/index.less" />
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
@@ -14,6 +14,26 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <header>
+    <figure>
+      <img src="./IMG_20190522_162451_505.jpg" alt="my-profile-picture">
+    </figure>
+    <h1>Sandrava Philips - Web Dev</h1>
+    <h4>Technology is my jam!</h4>
+    <p>Occassionally, I have time to work on side projects. If you're interested, let me know by signing up on this website</p>
+    <button>Let's Team Up</button>
+  </header>
+
+  <main>
+    
+  </main>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </body>
 </html>
