completed the markup for the resume

--- a/index.html
+++ b/index.html
@@ -32,8 +32,59 @@
   </header>
 
   <main>
-    
+    <div>
+      <section>
+        <h2>Listen Up...</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis earum repudiandae voluptates sequi, non molestias animi illo nostrum sit quam quaerat necessitatibus officiis. Iusto ut provident quas vitae saepe.</p>
+      </section>
+
+      <section>
+        <h2>Stuff I'm Good At:</h2>
+        <ul>
+          <li>Disc Golf</li>
+          <li>Coding up UI</li>
+          <li>Playing lots of video games</li>
+          <li>Using bootsrap grid</li>
+          <li>Taking long naps</li>
+        </ul>
+      </section>
+    </div>
+
+    <div>
+      <h3>Work History</h3>
+      <table>
+        <tr>
+          <th>Years</th>
+          <th>Company</th>
+          <th>Title</th>
+          <th>Tech Used</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Apple</td>
+          <td>Software Engineer</td>
+          <td>Swift</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Microsoft</td>
+          <td>Computer Scientist</td>
+          <td>.Net</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Amazon</td>
+          <td>Dev Ops</td>
+          <td>Aws</td>
+        </tr>
+    </table>
+    </div>
   </main>
+
+  <footer>
+    <p>Copyright Awesomeness 2018</p>
+  </footer>
+  
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </body>
 </html>
