completed styling for the header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </figure>
     <h1>Sandrava Philips - Web Dev</h1>
     <h4>Technology is my jam!</h4>
-    <p>Occassionally, I have time to work on side projects. If you're interested, let me know by signing up on this website</p>
+    <p>Occassionally, I have time to work on side projects. If you're interested, let me know by signing up on this website.</p>
     <button>Let's Team Up</button>
   </header>
 
@@ -35,11 +35,11 @@
     <div>
       <section>
         <h2>Listen Up...</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis earum repudiandae voluptates sequi, non molestias animi illo nostrum sit quam quaerat necessitatibus officiis. Iusto ut provident quas vitae saepe.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque debitis earum repudiandae voluptates sequi, non molestias animi illo nostrum sit quam quaerat necessitatibus officiis. Iusto ut provident quas vitae saepe. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quod laboriosam eius saepe magni eos corporis qui! Autem molestiae, cum, sint amet totam, tempora qui facilis ducimus quia nam voluptates.</p>
       </section>
 
       <section>
-        <h2>Stuff I'm Good At:</h2>
+        <h3>Stuff I'm Good At:</h3>
         <ul>
           <li>Disc Golf</li>
           <li>Coding up UI</li>
@@ -84,7 +84,7 @@
   <footer>
     <p>Copyright Awesomeness 2018</p>
   </footer>
-  
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js" ></script>
 </body>
 </html>
