--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
       <h3>Work History</h3>
       <table>
         <tr>
-          <th>Years</th>
-          <th>Company</th>
-          <th>Title</th>
-          <th>Tech Used</th>
+          <td>Years</td>
+          <td>Company</td>
+          <td>Title</td>
+          <td>Tech Used</td>
         </tr>
         <tr>
           <td>1</td>
